--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,4 +28,4 @@ jobs:
         run: CI=false npm run build
 
       - name: deploy
-        run: netlify deploy -p --auth {{secrets.NETZA_AUTHTOKEN}} -site {{secrets.NETZA_SITE_ID}}
+        run: netlify deploy -p --auth ${{ secrets.NETZA_AUTHTOKEN }} --site ${{ secrets.NETZA_SITE_ID }}
