--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,6 +12,7 @@ jobs:
     steps: 
       - uses: actions/checkout@v3 
       - uses: actions/setup-node@v3 
+      - uses: netlify-cli/2.11.24
         with: 
           node-version: "16" 
           
