Se agrega el comando setHomepage en scripts/update_homepage.js y en develop.yml

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Test coverage 
         run: npm run test
 
+      - name: Set HomePage
+        run: npm run setHomePage
+
       - name: build
         run: CI=false npm run build
 
