Set environment QA to github see our secrets

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,6 +8,8 @@ on:
       
 jobs: 
   test-code: 
+    environment:
+      name: QA
     runs-on: ubuntu-latest 
     steps: 
       - uses: actions/checkout@v3 
