--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: Test Code 
+name: Build 
 
 on: 
   pull_request: 
@@ -7,7 +7,7 @@ on:
       - develop/* 
       
 jobs: 
-  test-code: 
+  QA-deploy: 
     environment:
       name: QA
     runs-on: ubuntu-latest 
@@ -34,3 +34,23 @@ jobs:
 
       - name: deploy
         run: netlify deploy -p --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --site ${{ secrets.NETLIFY_SITE_ID }}
+
+  PullRequest-Management:
+    needs: QA-deploy
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+
+      - name: Get Branch Name
+        id: get-branch
+        uses: ypicard/get-branch-name-github-action@v1
+
+      - name: pull-request
+        run: gh pr create --base main --head ${{ steps.get-branch.outputs.branch }} --title "Pulling ${{ steps.get-branch.outputs.branch }} into main"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
