--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,6 +5,22 @@ on:
   push: 
     branches-ignore:
       - main
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+#Set environment var CI to false to prevent error from warnings.
+env:
+  CI: false
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
       
 jobs: 
   Validate-Dev-Changes:
@@ -45,7 +61,7 @@ jobs:
         run: CI=false npm run build
           
       - name: deploy
-        run: netlify deploy -p --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --site ${{ secrets.NETLIFY_SITE_ID }}
+        run: netlify deploy -prod --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --site ${{ secrets.NETLIFY_SITE_ID }}
 
   PR-Management:
     needs: QA-deploy
@@ -57,14 +73,9 @@ jobs:
         with:
           node-version: "16"
 
-      # - name: Get Branch Name
-      #   id: get-branch
-      #   uses: ypicard/get-branch-name-github-action@v1
-
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      - name: Get Branch Name
         id: get-branch
+        uses: ypicard/get-branch-name-github-action@v1
 
       - name: pull-request
         run: gh pr create --base main --head ${{ steps.get-branch.outputs.branch }} --title "Pulling ${{ steps.get-branch.outputs.branch }} into main" --body "Automated PR"
