--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -61,7 +61,7 @@ jobs:
         run: CI=false npm run build
           
       - name: deploy
-        run: netlify deploy -prod --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --site ${{ secrets.NETLIFY_SITE_ID }}
+        run: netlify deploy --prod --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --site ${{ secrets.NETLIFY_SITE_ID }}
 
   PR-Management:
     needs: QA-deploy
